<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gl.androidquiz.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:paddingTop="@dimen/activity_vertical_margin"

        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1" />

        <CheckBox
            android:id="@+id/Q1_Option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1_Option1"
            android:checked="false"
            android:onClick="onCheckboxClicked"
            />

        <CheckBox
            android:id="@+id/Q1_Option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1_Option2"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/Q1_Option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1_Option3"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2"
            />

        <CheckBox
            android:id="@+id/Q2_Option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2_Option1"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/Q2_Option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2_Option2"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/Q2_Option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2_Option3"
            android:checked="false"
            android:onClick="onCheckboxClicked" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3" />

        <CheckBox
            android:id="@+id/Q3_Option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3_Option1"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/Q3_Option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3_Option2"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/Q3_Option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3_Option3"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_Q1"
            >

            <RadioButton
                android:id="@+id/Q4_Option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4_Option1"
                android:checked="false" />

            <RadioButton
                android:id="@+id/Q4_Option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4_Option2"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rg_Q2"
            >

            <RadioButton
                android:id="@+id/Q5_Option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_Option1"
                android:checked="false" />

            <RadioButton
                android:id="@+id/Q5_Option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_Option2"
                android:checked="false" />

            <RadioButton
                android:id="@+id/Q5_Option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_Option3"
                android:checked="false" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q6" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rg_Q3"
            >

            <RadioButton
                android:id="@+id/Q6_Option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q6_Option1"
                android:checked="false" />

            <RadioButton
                android:id="@+id/Q6_Option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q6_Option2"
                android:checked="false" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/bSubmit"
            />
    </LinearLayout>
</ScrollView>